test texte filtres pour correction du contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -101,7 +101,7 @@ nav ul li img {
 	justify-content: center;
 }
 .nav-pills .nav-link.active-tag, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
